Replace String.isBlank by String.trim().isEmpty() for Java8 compatibility
Fixes #103

Signed-off-by: Jeff MAURY <jmaury@redhat.com>